fixed features alignment on mobile

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -10,6 +10,8 @@
   }
 
   &__wrapper {
+    display: flex;
+
     @include limitContentWidth;
 
     @include gridWithColumns(1, 8, 12);
@@ -48,7 +50,7 @@
     align-items: center;
 
     @include elementSize(260px, 48px);
-    margin-top: 51px;
+    margin: 51px auto 0;
 
     &--button {
       cursor: pointer;
@@ -110,6 +112,8 @@
   }
 
   &__background {
+    justify-self: right;
+
     margin-top: 8px;
     @include elementSize(344px, 222px);
 
